--- a/resume/css/components.css
+++ b/resume/css/components.css
@@ -80,6 +80,7 @@
     padding-bottom: 1px;
     border-bottom: 1px solid #e8e8e8;
     color: var(--text-primary);
+    margin-bottom: 0;
 }
 
 .item .item-desc {
@@ -87,20 +88,23 @@
     line-height: 1.4;
     flex: 1 1 auto;
     color: var(--text-secondary);
+    margin-top: 15px;
 }
 
 .item .item-dates {
     font-size: 0.85rem;
     color: #888;
     font-style: italic;
-    margin-bottom: 0px;
+    margin-top: 2px;
+    margin-bottom: 0;
 }
 
 .item .item-keywords {
     font-size: 0.8rem;
     color: #666;
     font-style: italic;
-    margin-bottom: 0px;
+    margin-top: 2px;
+    margin-bottom: 0;
 }
 
 .item.imgbig {
